# sxdpi

./: .gitignore  README.md  convert_icon.ps1  package-lock.json  package.json
.github/: FUNDING.yml
src/: app.js  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alternative_engine.rs  commands.rs  dns.rs  dpi_engine.rs  lib.rs  main.rs  settings.rs  system_proxy.rs
